--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="8"
-        android:inputType="date"
+        android:inputType="text"
         android:layout_alignTop="@+id/textDate"
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
