--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -80,7 +80,8 @@
         android:layout_below="@+id/editTextUsername"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="wrap_content"
