--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/schwein5_30l"
+
     tools:context="com.example.thomasroehl.shopadminandroid.gui.Login_Register_Activity">
 
 
@@ -18,6 +21,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:background="#f97d7b"
+        android:textColor="#fefcfc"
         android:visibility="invisible"/>
 
     <Button
@@ -28,7 +33,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible"/>
+        android:visibility="visible"
+        android:background="#f97d7b"
+        android:textColor="#fefbfb" />
 
     <Button
         android:layout_width="wrap_content"
@@ -37,19 +44,9 @@
         android:id="@+id/buttonLogin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login to existing account"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_red_light"
-        android:id="@+id/textViewInfo"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentEnd="true"
+        android:textColor="#fefcfc"
+        android:background="#f97d7b" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,7 +57,8 @@
         android:layout_below="@+id/textViewInfo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:textColor="#f97d7b" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -93,7 +91,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:textColor="#f97d7b" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -118,6 +117,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="15dp"
+        android:textColor="#f97d7b"
         android:visibility="invisible"/>
 
     <EditText
@@ -153,7 +153,29 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="15dp"
+        android:textColor="#f97d7b"
         android:visibility="invisible"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login to existing account"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textColor="#f97d7b"
+        android:id="@+id/textViewInfo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/editTextVerifyPassword"
+        android:layout_alignRight="@+id/editTextVerifyPassword"
+        android:layout_alignEnd="@+id/editTextVerifyPassword" />
+
 
     <EditText
         android:layout_width="wrap_content"
