--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/schwein5_30l"
     tools:context=".gui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -16,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="#f97d7b"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -44,7 +45,9 @@
                 android:stretchColumns="1"
                 android:layout_alignParentTop="true"
                 android:id="@+id/tbl_Main"
-                android:onClick="onClickTable">
+                android:onClick="onClickTable"
+                android:background="#030303"
+                android:backgroundTint="#f97d7b">
             </TableLayout>
         </ScrollView>
 
@@ -55,7 +58,7 @@
             android:id="@+id/btn_Scan"
             android:layout_weight="0.35"
             android:clickable="true"
-            android:background="#fd03aa"
+            android:background="#f97d7b"
             android:textColor="#fdfafa"
             android:textStyle="bold"
             android:textSize="60dp"
