--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -124,7 +124,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:id="@+id/textSpaceBetweenButtons"
+            android:layout_weight="2"/>
 
         <Button
             android:id="@+id/buttonSave"
