- design change (part1)

--- a/app/src/main/res/layout/report_fragment_category_summary.xml
+++ b/app/src/main/res/layout/report_fragment_category_summary.xml
@@ -17,7 +17,8 @@
             android:layout_alignParentTop="true"
             android:textColor="#f97d7b"
             android:id="@+id/tbl_Report_Category_Summary"
-            android:onClick="onClickTable">
+            android:onClick="onClickTable"
+            android:background="#ffffff">
         </TableLayout>
     </ScrollView>
 
