--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -8,12 +8,11 @@
     >
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/idToolbarEdit1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="#f97d7b"
-
         android:textColor="#fdfafa"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
@@ -22,7 +21,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/idToolbarEdit1"
         android:textColor="#f97d7b"
         android:fillViewport="false" />
         <!-- android:background="?attr/colorPrimary"
