ToolBar added in all activities

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#f97d7b</color>
     <color name="colorAccent">#f97d7b</color>
     <color name="colorPigPink">#f97d7b</color>
+    <color name="white">#ffffff</color>
+    <color name="White">#ffffff</color>
 </resources>
