--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/schwein5_30l"
+    tools:context=".gui.Login_Register_Activity"
+    >
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/idCustomView">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/idToolbarEdit1"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#f97d7b"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +34,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/schwein5_30l"
-    tools:context="com.example.thomasroehl.shopadminandroid.gui.Login_Register_Activity">
+    tools:context="com.example.thomasroehl.shopadminandroid.gui.Login_Register_Activity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
 
@@ -193,3 +217,4 @@
         android:layout_below="@+id/editTextVerifyPassword" />-->
 
 </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
