- Implement Burger Navigation Login/Register (exit, help, logout)

--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -67,8 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:textColor="#f97d7b"
-        android:layout_below="@id/tab_layout"
-        android:background="#64dcdada" />
+        android:layout_below="@id/tab_layout" />
 
 </RelativeLayout>
 
