--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f97d7b</color>
-    <color name="colorPrimaryDark">#f97d7b</color>
+    <color name="colorPrimaryDark">#ed5552</color>
     <color name="colorAccent">#f97d7b</color>
     <color name="colorPigPink">#f97d7b</color>
     <color name="white">#ffffff</color>
